--- a/package.json
+++ b/package.json
@@ -1,17 +1,16 @@
 {
   "name": "horoscope-api",
-  "version": "1.0.0",
   "private": true,
+  "version": "1.0.0",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "start": "next start"
   },
   "dependencies": {
-    "cheerio": "^1.0.0-rc.12",
     "next": "14.2.5",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "cheerio": "^1.0.0-rc.12"
   }
 }
