--- a/package.json
+++ b/package.json
@@ -12,5 +12,10 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "cheerio": "^1.0.0-rc.12"
+  },
+  "devDependencies": {
+    "typescript": "^5.3.3",
+    "@types/node": "^20.11.0",
+    "@types/react": "^18.2.45"
   }
 }
