--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
   "name": "horoscope-api",
-  "private": true,
   "version": "1.0.0",
   "scripts": {
     "dev": "next dev",
@@ -11,12 +10,14 @@
     "next": "14.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "cheerio": "^1.0.0-rc.12"
     "puppeteer": "^23.0.0"
   },
   "devDependencies": {
-    "typescript": "^5.3.3",
-    "@types/node": "^20.11.0",
-    "@types/react": "^18.2.45"
+    "@types/node": "^20.5.0",
+    "@types/react": "^18.2.8",
+    "typescript": "^5.2.2"
+  },
+  "engines": {
+    "node": "20.x"
   }
 }
