--- a/package.json
+++ b/package.json
@@ -13,14 +13,12 @@
     "react-dom": "18.2.0",
     "cheerio": "^1.0.0-rc.12",
     "jsdom": "^24.0.0"
-    
   },
   "devDependencies": {
     "@types/node": "^20.5.0",
     "@types/react": "^18.2.8",
-    "typescript": "^5.2.2"
+    "typescript": "^5.2.2",
     "@types/jsdom": "^21.1.5"
-     
   },
   "engines": {
     "node": "20.x"
